# iog

./: AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.ac
.tx/: config
bindings/python/: Makefile.am  iog.defs  iog.override
cut-n-paste/toolbar-editor/: Makefile.am
cut-n-paste/totem-screensaver/: Makefile.am  totem-scrsaver.c  totem-scrsaver.h
data/: Makefile.am  gtkrc  iog-image-properties-dialog.ui  iog-multiple-save-as-dialog.ui  iog-preferences-dialog.ui  iog.appdata.xml.in  iog.css  iog.desktop.in.in  iog.pc.in  org.gde2.iog.gschema.xml.in
data/icons/16x16/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/scalable/: Makefile.am
doc/reference/: Makefile.am  iog-docs.sgml.in  iog-sections.txt
help/: ChangeLog  Makefile.am
help/C/: index.docbook  legal.xml
help/ar/: ar.po
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: es.po
help/eu/: eu.po
help/fi/: fi.po
help/fr/: fr.po
help/it/: it.po
help/ja/: ja.po
help/ko/: ko.po
help/oc/: oc.po
help/pa/: pa.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/sv/: sv.po
help/th/: th.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
help/zh_TW/: zh_TW.po
jpegutils/: Makefile.am  README.6b  README.8a  transupp-8a.c  transupp-8a.h
man/: Makefile.am  iog.1
plugins/: ChangeLog  Makefile.am
plugins/fullscreen/: fullscreen.iog-plugin.desktop.in  iog-fullscreen-plugin.c  iog-fullscreen-plugin.h
plugins/reload/: iog-reload-plugin.c  iog-reload-plugin.h  reload.iog-plugin.desktop.in
plugins/statusbar-date/: iog-statusbar-date-plugin.c  iog-statusbar-date-plugin.h  statusbar-date.iog-plugin.desktop.in
po/: ChangeLog  POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cmn.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  es_CO.po  es_MX.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  frp.po  fur.po  ga.po  (+68 more)
src/: Makefile.am  iog-application-service.xml  iog-application.c  iog-application.h  iog-clipboard-handler.c  iog-clipboard-handler.h  iog-close-confirmation-dialog.c  iog-close-confirmation-dialog.h  iog-config-keys.h  iog-debug.c  iog-debug.h  iog-dialog.c  iog-dialog.h  iog-enum-types.c.template  iog-enum-types.h.template  iog-enums.h  iog-error-message-area.c  iog-error-message-area.h  iog-exif-details.c  iog-exif-details.h  iog-exif-util.c  iog-exif-util.h  iog-file-chooser.c  iog-file-chooser.h  iog-image-jpeg.c  iog-image-jpeg.h  iog-image-private.h  iog-image-save-info.c  iog-image-save-info.h  iog-image.c  iog-image.h  iog-job-queue.c  iog-job-queue.h  iog-jobs.c  iog-jobs.h  iog-list-store.c  iog-list-store.h  iog-metadata-reader-jpg.c  iog-metadata-reader-jpg.h  iog-metadata-reader-png.c  (+54 more)
