@YELP_HELP_RULES@

HELP_ID = iog
HELP_FILES = index.docbook legal.xml
HELP_MEDIA = 					\
	figures/iog_save_as_window.png		\
	figures/iog_start_window.png		\
	figures/iog_toolbar_editor_window.png

HELP_LINGUAS = ar ca cs da de el en_GB es eu fi fr it ja ko oc pa pl pt_BR ru sv th uk zh_CN zh_TW

-include $(top_srcdir)/git.mk
