size = scalable
actioniconsdir = $(pkgdatadir)/icons/hicolor/$(size)/actions
appiconsdir = $(datadir)/icons/hicolor/$(size)/apps

dist_appicons_DATA = \
	apps/iog.svg
dist_actionicons_DATA = \
	actions/iog-plugin.svg	  	\
	actions/iog-image-collection.svg  \
	actions/slideshow-play.svg

-include $(top_srcdir)/git.mk
